--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=4" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aplicación de Control de Jornadas Trabajadas</title>
+    <title>Gestión de Proyectos</title>
   </head>
   <body>
     <div id="root"></div>
